terminando el blog de jpa, continuar con service

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -6,9 +6,9 @@ import { SITE_TITLE } from "../consts";
 <header>
 	<nav class="text-amber-400">
 		<h2 class="font-bold">
-			<a href="/">{SITE_TITLE} <span class="text-amber-400">...</span></a>
+			<a href="/">{SITE_TITLE}</a>
 		</h2>
-		<div class="internal-links">
+		<div class="internal-links text-sm md:text-lg">
 			<HeaderLink href="/">Inicio</HeaderLink>
 			<HeaderLink href="/blog/legends">Leyendas</HeaderLink>
 			<HeaderLink href="/blog/dev">Devs</HeaderLink>
