se agrega la url de instagram a las redes sociales.

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -30,8 +30,8 @@ import { SITE_TITLE } from "../consts";
 					></path></svg
 				>
 			</a>
-			<a href="" target="_blank">
-				<span class="sr-only">Follow Astro on Twitter</span>
+			<a href="" target="https://www.instagram.com/jberriosgallo/">
+				<span class="sr-only">Follow Jimmy Dev&Geek in Instagram</span>
 				<svg
 					role="img"
 					viewBox="0 0 24 24"
