--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -20,8 +20,8 @@ const today = new Date();
 				></path></svg
 			>
 		</a>
-		<a href="" target="_blank">
-			<span class="sr-only">Follow Astro on Twitter</span>
+		<a href="" target="https://www.instagram.com/jberriosgallo/">
+			<span class="sr-only">Follow Jimmy Dev&Geek in Instagram</span>
 			<svg
 				role="img"
 				viewBox="0 0 24 24"
