se quita la url de instagram del icono para ver que sucede.

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -20,7 +20,7 @@ const today = new Date();
 				></path></svg
 			>
 		</a>
-		<a href="" target="https://www.instagram.com/jberriosgallo/">
+		<a href="" target="#">
 			<span class="sr-only">Follow Jimmy Dev&Geek in Instagram</span>
 			<svg
 				role="img"
