--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -30,7 +30,7 @@ import { SITE_TITLE } from "../consts";
 					></path></svg
 				>
 			</a>
-			<a href="" target="https://www.instagram.com/jberriosgallo/">
+			<a href="" target="#">
 				<span class="sr-only">Follow Jimmy Dev&Geek in Instagram</span>
 				<svg
 					role="img"
