El error fue solucionado, nunca colocar la url del ancla en la propiedad target.

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -30,7 +30,7 @@ import { SITE_TITLE } from "../consts";
 					></path></svg
 				>
 			</a>
-			<a href="" target="#">
+			<a href="https://www.instagram.com/jberriosgallo/" target="_blank">
 				<span class="sr-only">Follow Jimmy Dev&Geek in Instagram</span>
 				<svg
 					role="img"
