--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -20,7 +20,7 @@ const today = new Date();
 				></path></svg
 			>
 		</a>
-		<a href="" target="#">
+		<a href="https://www.instagram.com/jberriosgallo/" target="_blank">
 			<span class="sr-only">Follow Jimmy Dev&Geek in Instagram</span>
 			<svg
 				role="img"
